<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemindersActivity">

    <ImageView
        android:id="@+id/imageViewSymptomsTopPic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Reminders_banner_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/signsandsymptoms"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/imageViewTextSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/txtHydration"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewSymptomsTopPic"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvChooseTimes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/txtChooseTimes"
        android:text="@string/txtChooseTimes"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSymptomsTopPic" />


    <TextView
        android:id="@+id/tvStartLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/contdesc_startime"
        android:text="@string/starttime"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvEndLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseTimes" />

    <TextView
        android:id="@+id/tvEndLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/contdesc_endtime"
        android:text="@string/endtime"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvStartLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseTimes" />


    <Spinner
        android:id="@+id/spinnerStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvStartLabel"
        app:layout_constraintStart_toStartOf="@+id/tvStartLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvStartLabel"/>

    <Spinner
        android:id="@+id/spinnerEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvEndLabel"
        app:layout_constraintStart_toStartOf="@+id/tvEndLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvEndLabel"/>

    <TextView
        android:id="@+id/tvInterval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/reminder_interval_title"
        android:text="@string/reminder_interval_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerStartTime" />

    <Button
        android:id="@+id/btn15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:contentDescription="@string/contdesc_fifteen"
        android:enabled="false"
        android:text="@string/fifteen"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btn30"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInterval"/>

    <Button
        android:id="@+id/btn30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_border"
        android:contentDescription="@string/contdesc_thirty"
        android:enabled="false"
        android:text="@string/thirty"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/btn15"
        app:layout_constraintEnd_toStartOf="@+id/btn60"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn15"
        app:layout_constraintTop_toTopOf="@+id/btn15"/>

    <Button
        android:id="@+id/btn60"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_border"
        android:contentDescription="@string/contdesc_sixty"
        android:enabled="false"
        android:text="@string/sixty"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/btn30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn30"
        app:layout_constraintTop_toTopOf="@+id/btn30"/>

    <TextView
        android:id="@+id/tvDOW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/contdesc_dow"
        android:text="@string/contdesc_dow"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn15" />

    <Button
        android:id="@+id/btnSunday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_border"
        android:contentDescription="@string/contdesc_sunday"
        android:gravity="center"
        android:text="@string/sunday"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnMonday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDOW"/>

    <Button
        android:id="@+id/btnMonday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/black_border"
        android:contentDescription="@string/contdesc_monday"
        android:gravity="center"
        android:text="@string/monday"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSunday"
        app:layout_constraintEnd_toStartOf="@+id/btnTuesday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSunday"
        app:layout_constraintTop_toTopOf="@+id/btnSunday"/>

    <Button
        android:id="@+id/btnTuesday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/black_border"
        android:contentDescription="@string/contdesc_tuesday"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnMonday"
        app:layout_constraintEnd_toStartOf="@+id/btnWednesday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMonday"
        app:layout_constraintTop_toTopOf="@+id/btnMonday"/>

    <Button
        android:id="@+id/btnWednesday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/black_border"
        android:contentDescription="@string/contdesc_wednesday"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnTuesday"
        app:layout_constraintEnd_toStartOf="@+id/btnThursday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTuesday"
        app:layout_constraintTop_toTopOf="@+id/btnTuesday"/>

    <Button
        android:id="@+id/btnThursday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/black_border"
        android:contentDescription="@string/contdesc_thursday"
        android:gravity="center"
        android:text="@string/thursday"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnWednesday"
        app:layout_constraintEnd_toStartOf="@+id/btnFriday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnWednesday"
        app:layout_constraintTop_toTopOf="@+id/btnWednesday"/>

    <Button
        android:id="@+id/btnFriday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/black_border"
        android:contentDescription="@string/contdesc_friday"
        android:gravity="center"
        android:text="@string/friday"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnThursday"
        app:layout_constraintEnd_toStartOf="@+id/btnSaturday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThursday"
        app:layout_constraintTop_toTopOf="@+id/btnThursday"/>

    <Button
        android:id="@+id/btnSaturday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/black_border"
        android:contentDescription="@string/contdesc_saturday"
        android:gravity="center"
        android:text="@string/saturday"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnFriday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFriday"
        app:layout_constraintTop_toTopOf="@+id/btnFriday"/>

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtSummary"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnWednesday"/>

    <Button
        android:id="@+id/btnSetAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/setbutton"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:enabled="false"
        app:layout_constraintEnd_toStartOf="@+id/btnClearAlarm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary"/>

    <Button
        android:id="@+id/btnClearAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/black"
        android:text="@string/clearbutton"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSetAlarm"
        app:layout_constraintTop_toTopOf="@+id/btnSetAlarm"/>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:background="@android:color/black"
        android:contentDescription="@string/settings_done_btn"
        android:text="@string/btn_save_settings"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetAlarm"/>

</androidx.constraintlayout.widget.ConstraintLayout>